--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,3 +38,98 @@ body {
     line-height: 1;
     font-family: "Roboto", sans-serif;
 }
+a {
+    text-decoration: none;
+}
+
+.container-home {
+    background-image: url(../img/home.avif);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.list-home {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 72px 72px 72px 72px;
+    list-style: none;
+    width: 600px;
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 14px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    gap: 18px;
+}
+
+.item-home {
+}
+
+.link-dif-site {
+    color: rgb(7, 0, 0);
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    z-index: 1;
+    border-radius: 4px;
+    position: relative;
+    font-weight: 500;
+}
+.item-home:hover .link-dif-site::before {
+    opacity: 0.5;
+}
+
+.link-dif-site::before {
+    background-image: url(--bgi);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    content: " ";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    border-radius: 4px;
+    transition: all 0.4s;
+}
+
+.back-to-home {
+    position: fixed;
+    top: 7%;
+    left: 8%;
+    width: 17rem;
+    height: 5rem;
+    background-image: linear-gradient(
+        to right,
+        #02aab0 0%,
+        #00cdac 51%,
+        #02aab0 100%
+    );
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    transition: all 0.3s;
+    color: #fff;
+    font-size: 2rem;
+}
+
+.back-to-home:hover {
+    background-image: linear-gradient(
+        to left,
+        #02aab0 0%,
+        #00e0bb 51%,
+        #007c80 100%
+    );
+    opacity: 0.8;
+}
