--- a/assets/css/project-1.css
+++ b/assets/css/project-1.css
@@ -59,3 +59,34 @@ h2 {
     font-size: 20px;
     background: green;
 }
+
+.clock-control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 2rem;
+}
+
+.btn-control {
+    width: 100px;
+    height: 60px;
+    border-radius: 8px;
+    color: #fff;
+    transition: all 0.3s;
+    font-size: 3rem;
+}
+.btn-control:hover {
+    opacity: 0.9;
+}
+
+#btn-control-play {
+    background-color: rgb(12, 236, 12);
+}
+#btn-control-replay {
+    background-color: rgb(230, 21, 21);
+}
+
+#btn-control-pause {
+    background-color: rgb(253, 253, 18);
+}
